grammar/grammar.ebnf
(* ==========================================================================
   S.A.R.A.L - Simple And Readable Arithmetic Language
   BNF/EBNF grammar
   ========================================================================== *)

<program> ::= <stmt-list>

<stmt-list> ::= <stmt> | <stmt> <stmt-list>

<stmt> ::= <assignment>
          | <show-stmt>
          | <if-stmt>
          | <while-stmt>
          | <func-stmt>
          | <func-call-stmt>
          | <return-stmt>

(* ------------------------------ statements ------------------------------ *)

<assignment> ::= <type> <identifier> = <initializer>;    (* declaration   *)
                | <identifier> = <initializer>;          (* reassignment  *)

<show-stmt> ::= show(<exp>);

<if-stmt> ::= if(<comp-exp>) <block> [else <block>]

<while-stmt> ::= while(<comp-exp>) <block>

<return-stmt> ::= return <exp>;
                | return;

<block> ::= { <stmt-list> }

(* ------------------------------- functions ------------------------------ *)

<func-stmt> ::= <return-type> <identifier>(<param-list>) <block>
<param-list> ::= epsilon
                | <type> <identifier>
                | <type> <identifier>, <param-list>

<func-call> ::= <identifier>(<arg-list>)
<func-call-stmt> ::= <func-call>;
<arg-list> ::= epsilon
              | <exp>
              | <exp>, <arg-list>

(* ------------------------------ expressions -----------------------------

   Precedence, lowest to highest:
     <comp-exp>    ==  !=  <  >  <=  >=     (non-associative, at most one)
     <arith-exp>   +  -                     (left associative)
     <term>        *  /  %                  (left associative)
     <factor>      literals, variables, calls, ( ... )
   ------------------------------------------------------------------------ *)

<initializer> ::= <exp>
                  | "[" <initializer-list> "]"
<initializer-list> ::= epsilon
                      | <initializer>
                      | <initializer> "," <initializer-list>

<exp> ::= <comp-exp>

<comp-exp> ::= <arith-exp>
              | <arith-exp> <comp-op> <arith-exp>

<comp-op> ::=  !=
              | ==
              | <
              | >
              | <=
              | >=

<arith-exp> ::= <arith-exp> + <term>
          | <arith-exp> - <term>
          | <term>

<term> ::= <term> % <factor>
            | <term> / <factor>
            | <term> * <factor>
            | <factor>

<factor> ::= (<exp>)
            | <number>
            | <string>
            | <bool>
            | <identifier>
            | <func-call>

(* ------------------------------- comments ------------------------------ *)

<comment> ::= <line-comment> | <block-comment>

<line-comment> ::= "//" { <any-char-except-newline> } ( <newline> | <EOF> )

<block-comment> ::= "/*" { <any-char> } "*/"

<any-char> ::= <letter> | <digit> | <printable-chars> | " " | <newline>

<any-char-except-newline> ::= <letter> | <digit> | <printable-chars> | " "


(* ------------------------------- terminals ------------------------------ *)

<identifier> ::= <letter> { <letter> | <digit> }

<number> ::= <digit> { <digit> } [ . <digit> { <digit> } ]

<bool> ::= true | false

<string> ::= "<word>"

<word> ::= epsilon
          | <chars>
          | <chars><word>
<chars> ::= " "
            | <letter>
            | <digit>
            | <printable-chars>

<printable-chars> ::= @ | ! | # | $
                      | % | ^ | &
                      | * | ( | )
                      | : | ? | ,
                      | _ | \ | /
                      | .

<digit> ::= 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9

<letter> ::= a | b | ... | z | A | B | ..... | Z

<type> ::= int | float | string | bool

<return-type> ::= int | float | string | bool
